test/classes/initializers/generics/init-param-from-non-param.good
init-param-from-non-param.chpl:6: error: Initializing parameter 'p' to value not known at compile time
